# automata-like-programming

./: Cargo.toml  LICENSE  README.md
src/: automata.rs  automata_state.rs  automaton.rs  automaton_state.rs  connection.rs  key.rs  lib.rs
src/simple_impl/: mod.rs  simple_state.rs
